--- a/index.html
+++ b/index.html
@@ -1,22 +1,223 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Instagram Feed con Bootstrap</title>
-    <script src="https://kit.fontawesome.com/6edd742869.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
-  </head>
-  <body>
-    
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <title>Instagram Feed con Bootstrap</title>
+  <script src="https://kit.fontawesome.com/6edd742869.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
+</head>
 
-  </body>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <i class="fa-brands fa-instagram"></i>
+            Instagram
+          </a>
+        </div>
+      </nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Acción</a></li>
+            <li><a class="dropdown-item" href="#">Otra acción</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" href="#">Algo más aquí</a></li>
+          </ul>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <button type="button" class="btn btn-success mx-4">Create a new post</button>
+          <div class="btn-group" role="group">
+            <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <i class="fa-thin fa-gear"></i>
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li><a class="dropdown-item" href="#">Accesibility</a></li>
+              <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
+              <li><a class="dropdown-item" href="#">Log out</a></li>
+            </ul>
+          </div>
+        </form>
+      </div>
+    </div>
+  </nav>
+  <div class="container mt-5">
+    <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
+          data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
+          <i class="fa-regular fa-table-cells"></i></button> </li>
+      <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
+          data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
+          <i class="fa-solid fa-square"></i></button> </li>
+    </ul>
+    <div class="border-grey bg-white p-3 tab-content">
+      <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+        <div class="container">
+          <div class="card-group">
+            <div class="row">
+
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="border-grey bg-white p-3 tab-content">
+      <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
+        <div class="container">
+          <div class="card-group">
+            <div class="row">
+
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
+                <div class="card">
+                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+</body>
+
 </html>
