--- a/index.html
+++ b/index.html
@@ -40,33 +40,69 @@
           </li>
         </ul>
         <form class="d-flex" role="search">
-          <button type="button" class="btn btn-success mx-4">Create a new post</button>
-          <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              <i class="fa-thin fa-gear"></i>
+          <button type="button" class="btn btn-success mx-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Create a new post
+          </button>
+
+
+          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel fw-bold">Create a new post</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="mb-3">
+                    <label for="message-text" class="col-form-label fw-bold">Caption:</label>
+                    <textarea class="form-control text-muted" id="message-text">Add the caption of your post here</textarea>
+                  </div>
+                  <button type="button" class="btn btn-outline-dark">
+                    <i class="fa-solid fa-camera"></i>
+                  </button>
+                  <button type="button" class="btn btn-outline-dark">
+                    <i class="fa-solid fa-location-dot"></i>
+                  </button>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-success btn-sm">Publish</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="btn-group">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+              data-bs-display="static" aria-expanded="false">
+              <i class="fa-light fa-gear"></i>
             </button>
-            <ul class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+            <ul class="dropdown-menu dropdown-menu-lg-end">
               <li><a class="dropdown-item" href="#">Profile</a></li>
               <li><a class="dropdown-item" href="#">Accesibility</a></li>
               <li><a class="dropdown-item" href="#">Privacy and Data</a></li>
-              <li><a class="dropdown-item" href="#">Log out</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item text-danger" href="#">Log out</a></li>
             </ul>
           </div>
         </form>
       </div>
     </div>
   </nav>
-  <div class="container mt-5">
+
+
+  <div class="container mt-2">
     <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
           data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
           <i class="fa-regular fa-table-cells"></i></button> </li>
       <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
           data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
-          <i class="fa-solid fa-square"></i></button> </li>
+          <i class="fa-solid fa-square pagination text-start"></i></button> </li>
     </ul>
-    <div class="border-grey bg-white p-3 tab-content">
+    <div class="border-grey bg-white tab-content">
       <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
         <div class="container">
           <div class="card-group">
