--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
           <i class="fa-regular fa-table-cells"></i></button> </li>
       <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
           data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
-          <i class="fa-solid fa-square pagination text-start"></i></button> </li>
+          <i class="fa-solid fa-square pagination"></i></button> </li>
     </ul>
     <div class="border-grey bg-white tab-content">
       <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
