--- a/index.html
+++ b/index.html
@@ -29,22 +29,11 @@
       </nav>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Acción</a></li>
-            <li><a class="dropdown-item" href="#">Otra acción</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item" href="#">Algo más aquí</a></li>
-          </ul>
-          </li>
         </ul>
         <form class="d-flex" role="search">
-          <button type="button" class="btn btn-success mx-4" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="btn btn-success mx-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Create a new post
           </button>
-
-
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
             aria-hidden="true">
             <div class="modal-dialog">
@@ -56,7 +45,8 @@
                 <div class="modal-body">
                   <div class="mb-3">
                     <label for="message-text" class="col-form-label fw-bold">Caption:</label>
-                    <textarea class="form-control text-muted" id="message-text">Add the caption of your post here</textarea>
+                    <textarea class="form-control text-muted"
+                      id="message-text">Add the caption of your post here</textarea>
                   </div>
                   <button type="button" class="btn btn-outline-dark">
                     <i class="fa-solid fa-camera"></i>
