--- a/index.html
+++ b/index.html
@@ -82,14 +82,13 @@
     </div>
   </nav>
 
-
   <div class="container mt-2">
     <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
           data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
           <i class="fa-regular fa-table-cells"></i></button> </li>
-      <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
-          data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
+      <li class="nav-item" role="presentation"> <button class="nav-link" id="segunda-tab" data-bs-toggle="tab"
+          data-bs-target="#segunda" type="button" role="tab" aria-controls="segunda" aria-selected="false">
           <i class="fa-solid fa-square pagination"></i></button> </li>
     </ul>
     <div class="border-grey bg-white tab-content">
@@ -164,80 +163,7 @@
 
       </div>
     </div>
-    <div class="border-grey bg-white p-3 tab-content">
-      <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
-        <div class="container">
-          <div class="card-group">
-            <div class="row">
-
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-              </div>
-
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-              </div>
-
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-4 col-lg-4 p-0">
-                <div class="card">
-                  <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-
-      </div>
-    </div>
   </div>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
