--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
     </div>
   </nav>
 
-  <div class="container mt-2">
+  <div class="container nav justify-content-center">
     <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
           data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
           <i class="fa-regular fa-table-cells"></i></button> </li>
-      <li class="nav-item" role="presentation"> <button class="nav-link" id="segunda-tab" data-bs-toggle="tab"
-          data-bs-target="#segunda" type="button" role="tab" aria-controls="segunda" aria-selected="false">
-          <i class="fa-solid fa-square pagination"></i></button> </li>
+      <li class="nav-item" role="presentation"> <button class="active nav-link" id="home-tab" data-bs-toggle="tab"
+          data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true"> <i
+            class="fa-solid fa-square pagination"></i></button> </li>
     </ul>
     <div class="border-grey bg-white tab-content">
       <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
@@ -163,6 +163,23 @@
 
       </div>
     </div>
+    <div class="border-grey bg-white p-3 tab-content">
+      <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
+        <p>
+          AQUI GALERIA <br />
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu velit volutpat, dapibus odio
+          c, dictum laoreet
+          sapien. Morbi vel ullamcorper dolor. Ut tempus sed metus quis consequat. Vestibulum ante ipsum
+          primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean tempor pharetra nisi ut
+          aliquet. Phasellus sit amet justo enim. </p>
+      </div>
+    </div>
+  </div>
+
+  </div>
+  </div>
+  </div>
+
   </div>
 
 
