--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="btn-group">
             <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
               data-bs-display="static" aria-expanded="false">
-              <i class="fa-light fa-gear"></i>
+              <i class="fa-solid fa-gear"></i>
             </button>
             <ul class="dropdown-menu dropdown-menu-lg-end">
               <li><a class="dropdown-item" href="#">Profile</a></li>
@@ -84,10 +84,13 @@
 
   <div class="container nav justify-content-center">
     <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="myTab" role="tablist">
-      <li class="nav-item" role="presentation"> <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
+      
+      <li class="nav-item" role="presentation"> 
+        <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
           data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
           <i class="fa-regular fa-table-cells"></i></button> </li>
-      <li class="nav-item" role="presentation"> <button class="active nav-link" id="home-tab" data-bs-toggle="tab"
+      <li class="nav-item" role="presentation"> 
+        <button class="active nav-link" id="home-tab" data-bs-toggle="tab"
           data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true"> <i
             class="fa-solid fa-square pagination"></i></button> </li>
     </ul>
@@ -160,22 +163,14 @@
 
           </div>
         </div>
-
+          <!-- -->
       </div>
-    </div>
-    <div class="border-grey bg-white p-3 tab-content">
       <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        <p>
-          AQUI GALERIA <br />
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu velit volutpat, dapibus odio
-          c, dictum laoreet
-          sapien. Morbi vel ullamcorper dolor. Ut tempus sed metus quis consequat. Vestibulum ante ipsum
-          primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean tempor pharetra nisi ut
-          aliquet. Phasellus sit amet justo enim. </p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores repellendus veniam sunt ex nisi! Nisi doloremque perferendis impedit iure, error ratione vero, fugiat sequi maiores aut at optio quas fuga!
       </div>
+
     </div>
   </div>
-
   </div>
   </div>
   </div>
