--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <li class="nav-item" role="presentation"> 
         <button class="nav-link" id="settings-tab" data-bs-toggle="tab"
           data-bs-target="#settings" type="button" role="tab" aria-controls="settings" aria-selected="false">
-          <i class="fa-regular fa-table-cells"></i></button> </li>
+          <i class="fa-solid fa-table-cells"></i></button> </li>
       <li class="nav-item" role="presentation"> 
         <button class="active nav-link" id="home-tab" data-bs-toggle="tab"
           data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true"> <i
@@ -166,7 +166,7 @@
           <!-- -->
       </div>
       <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores repellendus veniam sunt ex nisi! Nisi doloremque perferendis impedit iure, error ratione vero, fugiat sequi maiores aut at optio quas fuga!
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis a error provident adipisci nihil rem temporibus consectetur veniam quod consequatur? Rem excepturi officiis quidem fugit culpa sint, deserunt fugiat porro.
       </div>
 
     </div>
