--- a/index.html
+++ b/index.html
@@ -168,7 +168,15 @@
       <div class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis a error provident adipisci nihil rem temporibus consectetur veniam quod consequatur? Rem excepturi officiis quidem fugit culpa sint, deserunt fugiat porro.
       </div>
-
+      <div class="card mx-auto d-block" style="width: 18rem;">
+        <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Título de la tarjeta</h5>
+          <p class="card-text">Un texto de ejemplo rápido para colocal cerca del título de la tarjeta y componer la mayor parte del contenido de la tarjeta.</p>
+          <a href="#" class="btn btn-primary">Ir a algún lugar</a>
+        </div>
+       
+      </div>
     </div>
   </div>
   </div>
