--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           role="tab" aria-controls="home" aria-selected="true"> <i class="fa-solid fa-square pagination"></i></button>
       </li>
     </ul>
-    <div class="border-grey bg-white p-3 tab-content">
+    <div class="border-grey bg-white tab-content">
       <div class="tab-pane" id="settings" role="tabpanel" aria-labelledby="settings-tab">
         <div class="container">
           <div class="row">
@@ -149,33 +149,35 @@
       <div class="tab-pane active p-3" id="home" role="tabpanel" aria-labelledby="home-tab">
         <div class="card mx-auto p-1 w-50">
           <div class="card-header d-flex justify-content-between">
-            <h4>Título de la foto</h4>
-            <p>12/12/12</p>
+            <h3>My Crazy dog Spark!</h3>
+            <p>08/26</p>
           </div>
-          <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+          <img src="https://cdn.pixabay.com/photo/2016/02/19/15/46/labrador-retriever-1210559__340.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Pie de la foto</h5>
-            <p>Lorem ipsum dolor, sit amet.</p>
+            <h5 class="card-title fw-bold">204 Likes</h5>
+            <p>This is an example of a very good photo that you can post on instagram</p>
           </div>
         </div>
         <div class="card mx-auto p-1 w-50">
           <div class="card-header d-flex justify-content-between">
-            <h4>Título de la foto</h4>
+            <h3>The greatness of Croatia</h3>
+            <p>04/09</p>
           </div>
-          <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+          <img src="https://cdn.pixabay.com/photo/2015/01/17/01/06/dubrovnik-601941__340.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Pie de la foto</h5>
-            <p>Lorem ipsum dolor, sit amet.</p>
+            <h5 class="card-title fw-bold">26985 Likes</h5>
+            <p>This is an example of a very good photo that you can post on instagram</p>
           </div>
         </div>
         <div class="card mx-auto p-1 w-50">
           <div class="card-header d-flex justify-content-between">
-            <h4>Título de la foto</h4>
+            <h3>Amazin Goal!</h3>
+            <p>06/10</p>
           </div>
-          <img src="https://picsum.photos/200/300" class="card-img-top" alt="...">
+          <img src="https://cdn.pixabay.com/photo/2016/11/14/05/21/children-1822688__340.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Pie de la foto</h5>
-            <p>Lorem ipsum dolor, sit amet.</p>
+            <h5 class="card-title fw-bold">204 Likes</h5>
+            <p>This is an example of a very good photo that you can post on instagram</p>
           </div>
         </div>
       </div>
